altered doc and enderecos
